--- a/app/src/main/res/layout/final_activity_details.xml
+++ b/app/src/main/res/layout/final_activity_details.xml
@@ -9,14 +9,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <ImageView
-            android:id="@+id/imagofCar"
+            android:id="@+id/imagofCar_db"
             android:layout_width="100dp"
             android:layout_height="140dp"
             app:srcCompat="@drawable/bmw"
             />
 
         <TextView
-            android:id="@+id/NameOfCar"
+            android:id="@+id/NameOfCar_db"
             android:layout_width="250dp"
             android:layout_height="143dp"
             android:text="TextView"
@@ -24,10 +24,10 @@
             android:textSize="60dp" />
 
         <Button
-            android:id="@+id/favbutton"
+            android:id="@+id/favbutton_db"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
-            android:background="@drawable/un"
+            android:background="@drawable/wun"
 
 
             />
@@ -41,7 +41,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/lotDetails"
+            android:id="@+id/lotDetails_db"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="gdasgasgasga"
